<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    android:padding="@dimen/padding_medium">

    <!-- Header Title -->
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/notifications_LBL_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notifications_title"
        android:textColor="@color/text_primary"
        style="@style/TextAppearance.StageMate.HeadlineMedium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Clear All Button -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/notifications_BTN_clear_all"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clear_all"
        android:textSize="@dimen/text_size_small"
        style="@style/Widget.Material3.Button.TextButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/notifications_LBL_title"
        app:layout_constraintBottom_toBottomOf="@id/notifications_LBL_title" />

    <!-- Empty State Layout -->
    <LinearLayout
        android:id="@+id/notifications_LAYOUT_empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/notifications_LBL_title"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:contentDescription="@string/cd_notifications_icon"
            app:srcCompat="@drawable/ic_notifications"
            app:tint="@color/text_secondary" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:text="@string/no_notifications"
            android:textColor="@color/text_secondary"
            android:textSize="@dimen/text_size_regular" />
    </LinearLayout>

    <!-- Notifications RecyclerView -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/notifications_RV_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/margin_large"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/notifications_LBL_title" />

</androidx.constraintlayout.widget.ConstraintLayout>
